Turned off overflow:hidden on accordion content to fix box shadow on iOS

--- a/css/index-v2.css
+++ b/css/index-v2.css
@@ -103,7 +103,7 @@ a {
 .accordion-content {
     max-height: 0px;
     opacity: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     transition: max-height 0.2s ease-in-out, opacity 0.5s;
 }
 
